# caps-lock-indicator

./: README.md  pyproject.toml
caps_lock_indicator/: __init__.py
